--- a/style.css
+++ b/style.css
@@ -43,12 +43,41 @@ body{
     margin-top: 4rem;
     font-size: 1.4vw;
 }
-.cartao__conteudo pegunta p{
+.cartao__conteudo__pegunta p{
     color: var(--text-color);
     font-weight: 500;
 }
-.cartao__conteudo resposta p
+.cartao__conteudo__resposta p
 {
     color: var(--card-back-color);
     font-weight: 700;
+}
+.cartao.active.cartao_conteudo{
+    transform: rotateY(180deg);
+}
+.cartao_conteudo_pergunta,
+.cartao_conteudo_resposta{
+    backface-visibility: hidden;
+    position:absolute;
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+}
+.cartao__conteudo__resposta{
+    transform: rotateY(180deg);
+    background-color: rgb(red, green, blue);
+    border: 4px solid var(--card-back-color);
+}
+footer {
+    background-color: black;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 2rem;
+}
+footer p{
+    text-align: center;
+    font-size: 6rem;
+    margin: 5rem;
 }
